Fixed arabic slider gapping issue and removed extra mods

--- a/src/component/WishlistSlider/WishlistSlider.style.scss
+++ b/src/component/WishlistSlider/WishlistSlider.style.scss
@@ -112,9 +112,6 @@
       margin-right: 7.92px;
       display: inline-block;
       vertical-align: top;
-      &:nth-last-child(2) {
-        margin-right: 0;
-      }
       &_isArabic {
         &:nth-child(2) {
           margin-right: 0;
